--- a/KitchenStory/Front-End/KitchenStory/src/app/welcome/welcome.component.html
+++ b/KitchenStory/Front-End/KitchenStory/src/app/welcome/welcome.component.html
@@ -1,9 +1,10 @@
-<div>
+
+<h1>Welcome!</h1>
+
+<div class="container">
     {{name}}, 
     
     Welcome to KitchenStory
-</div>
 
-<div>
     you can manage your items <a routerLink="/items">here</a>
 </div>
