--- a/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
+++ b/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
@@ -1,17 +1,27 @@
-<table border="1">
-    <caption>Item List</caption>
+<div class="form-group">
+    <input type="text" class="form-control mybox mb-4 mt-3" placeholder="Search" [(ngModel)] = "query"/>
+</div>
+
+<div class="container">
+    <h1>ITEM LIST</h1>
+    <table class="table">
     <thead>
         <tr>
             <th>Description</th>
             <th>Price</th>
             <th>Type</th>
+            <th>Quantity</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of items">
+        <tr *ngFor="let item of items | searchItems: query">
             <td>{{item.description}}</td>
             <td>{{item.price}}</td>
             <td>{{item.type}}</td>
+            <td><input type="text" name="quantity"></td>
+            <td><button class="btn btn-success" >Buy</button></td>
         </tr>
     </tbody>
-</table>
+    </table>
+</div> 
