Product list ready

--- a/KitchenStory/Front-End/KitchenStory/src/app/menu/menu.component.html
+++ b/KitchenStory/Front-End/KitchenStory/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
-        <div><a routerLink="https://simplilearn.com" class="navbar-brand">KitchenStory</a></div>
+        <div><a routerLink="/login" class="navbar-brand">KitchenStory</a></div>
         <ul class="navbar-nav">
-            <li><a *ngIf="isUserLoggedInM()" class="nav-link">Home</a></li>
+            <li><a *ngIf="isUserLoggedInM()" routerLink="/welcome/jluqueco"class="nav-link">Home</a></li>
             <li><a *ngIf="isUserLoggedInM()" routerLink="/items" class="nav-link">Items</a></li>
         </ul>
         <ul class="navbar-nav navbar-collapse justify-content-end">
