--- a/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
+++ b/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
@@ -18,7 +18,7 @@
         <tr *ngFor="let item of items | searchItems: query">
             <td>{{item.description}}</td>
             <td>{{item.price}}</td>
-            <td>{{item.type}}</td>
+            <td>{{item.type.description}}</td>
             <td><input type="text" name="quantity"></td>
             <td><button class="btn btn-success" >Buy</button></td>
         </tr>
