--- a/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
+++ b/KitchenStory/Front-End/KitchenStory/src/app/list-items/list-items.component.html
@@ -5,23 +5,25 @@
 <div class="container">
     <h1>ITEM LIST</h1>
     <table class="table">
-    <thead>
-        <tr>
-            <th>Description</th>
-            <th>Price</th>
-            <th>Type</th>
-            <th>Quantity</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of items | searchItems: query">
-            <td>{{item.description}}</td>
-            <td>{{item.price}}</td>
-            <td>{{item.type.description}}</td>
-            <td><input type="text" name="quantity"></td>
-            <td><button class="btn btn-success" >Buy</button></td>
-        </tr>
-    </tbody>
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Type</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of items | searchItems: query">
+                <td>{{item.description}}</td>
+                <td>{{item.price}}</td>
+                <td>{{item.type.description}}</td>
+                <td><input type="text" name="quantity"></td>
+            </tr>
+        </tbody>
     </table>
+    <div>
+        <button class="btn btn-success mb-7 mt-3" (click) = handlePurchase()>Buy</button>
+    </div>
+    
 </div> 
